Real auth wiring, applications + freelancers from DB, startup seeder, JsonIgnore on password